[project]
name = "libero"
version = "0.1.0"
description = "LIBERO: Benchmarking Knowledge Transfer for Lifelong Robot Learning"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [
    { name = "Bo Liu", email = "bliu@cs.utexas.edu" },
    { name = "Yifeng Zhu", email = "yifengz@cs.utexas.edu" },
    { name = "Chongkai Gao" },
    { name = "Yihao Feng" },
    { name = "Qiang Liu" },
    { name = "Yuke Zhu" },
    { name = "Peter Stone" },
]
dependencies = [
    "hydra-core==1.2.0",
    "easydict==1.9",
    "opencv-python==4.6.0.66",
    "robomimic==0.2.0",
    "thop==0.1.1-2209072238",
    "robosuite==1.4.0",
    "bddl==1.0.1",
    "future==0.18.2",
    "cloudpickle==2.1.0",
    "gym==0.25.2"
]

[project.scripts]
"lifelong.main" = "libero.lifelong.main:main"
"lifelong.eval" = "libero.lifelong.evaluate:main"
"libero.config_copy" = "scripts.config_copy:main"
"libero.create_template" = "scripts.create_template:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["libero*"]

[tool.setuptools.package-data]
libero = [
    "libero/assets/**/*",
    "libero/bddl_files/**/*",
    "libero/init_files/**/*",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
